# libvrt

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml  test.yml
assets/: bench-results.json
benches/: variant.cpp
cmake/: vrt.pc.in  vrtConfig.cmake.in
include/: vrt
tests/: access.cpp  assignment.cpp  cmp.cpp  construction.cpp  exception-safety.cpp  fun-mechanism.cpp  match.cpp  switch.cpp  utility.cpp  variant.cpp  visitor.cpp
tools/: run-bench.sh  visualize.py
